--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -41,7 +41,7 @@
         android:text="@string/maker"
         android:layout_marginEnd="20dp"
         android:textSize="15sp"
-        android:lineSpacingMultiplier="1.5"
+        android:lineSpacingMultiplier="1.2"
         android:layout_marginTop="30dp"
 
         app:layout_constraintTop_toBottomOf="@id/creditTitle"/>
@@ -61,6 +61,7 @@
         android:id="@+id/sv_credit"
         android:layout_width="match_parent"
         android:layout_height="150dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintTop_toBottomOf="@+id/skillTitle">
 
         <TextView
@@ -89,15 +90,17 @@
         android:id="@+id/sv_credit2"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        app:layout_constraintTop_toBottomOf="@+id/referenceTitle">
+        android:layout_marginEnd="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/referenceTitle"
+        tools:layout_editor_absoluteX="0dp">
 
         <TextView
             android:id="@+id/referenceText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="start"
-            android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
+            android:gravity="start"
             android:lineSpacingMultiplier="1.5"
             android:text="@string/skill" />
     </ScrollView>
