--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -125,7 +125,7 @@
         android:layout_width="135dp"
         android:layout_height="150dp"
         android:layout_marginStart="20dp"
-        android:background="@drawable/pic2"
+        android:background="@drawable/thumbnail2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toEndOf="@+id/memberIB1"
