--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -13,7 +13,7 @@
     <TextView
         android:id="@+id/creditTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:gravity="end"
         android:layout_marginEnd="20dp"
         android:text="@string/credits"
@@ -39,25 +39,58 @@
         android:layout_height="wrap_content"
         android:gravity="end"
         android:text="@string/maker"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:textSize="15sp"
-        android:lineSpacingMultiplier="1.2"
+        android:textSize="18sp"
+        android:lineSpacingMultiplier="1.1"
         android:layout_marginTop="30dp"
 
         app:layout_constraintTop_toBottomOf="@id/creditTitle"/>
 
     <TextView
-        android:id="@+id/skillTitle"
-        android:layout_width="match_parent"
+        android:id="@+id/referenceTitle"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/used"
+        android:text="@string/reference"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="24sp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tb_maker"/>
 
+    <TextView
+        android:id="@+id/referenceText"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:padding="5dp"
+        android:scrollbars="vertical"
+        android:linksClickable="true"
+        android:autoLink="web"
+        android:textIsSelectable="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="@string/referenceText"
+        android:textSize="14sp"
+        android:lineSpacingMultiplier="1.1"
+        android:gravity="start"
+        app:layout_constraintTop_toBottomOf="@+id/referenceTitle"
+        app:layout_constraintBottom_toTopOf="@id/aaa_1"
+        />
 
-    <ScrollView
+    <TextView
+        android:id="@+id/aaa_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/textBar"
+        android:textSize="12sp"
+        android:gravity="center"/>
+
+
+<!--    <ScrollView
         android:id="@+id/sv_credit"
         android:layout_width="match_parent"
         android:layout_height="150dp"
@@ -103,6 +136,6 @@
             android:gravity="start"
             android:lineSpacingMultiplier="1.5"
             android:text="@string/skill" />
-    </ScrollView>
+    </ScrollView>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
