--- a/app/src/main/res/menu/menu_pop_up.xml
+++ b/app/src/main/res/menu/menu_pop_up.xml
@@ -27,7 +27,7 @@
         android:id="@+id/themeMode"
         android:title="테마 변경" />
     <item
-        android:id="@+id/calendar"
+        android:id="@+id/go_calendar"
         android:title="일정 추가" />
     <item
         android:id="@+id/go_maker"
