--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -50,6 +50,7 @@
         app:layout_constraintTop_toBottomOf="@+id/diaryTextView"
         android:layout_marginTop="16dp"
         android:hint="내용을 입력하세요."
+        android:textColorHint="@color/theme_text_color"
         android:background="@color/theme_layout_color"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +84,7 @@
         android:gravity="center"
         android:text="달력 일정표"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#000000"
+        android:textColor="@color/theme_text_color"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
