--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -61,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
         android:layout_marginStart="100dp"
+        android:hint="@string/commentHint"
         app:layout_constraintBaseline_toBaselineOf="@id/nameTextView1"
         app:layout_constraintBottom_toBottomOf="@id/nameTextView1"
         app:layout_constraintTop_toTopOf="@+id/nameTextView1"
@@ -84,6 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
         android:layout_marginStart="100dp"
+        android:hint="@string/commentHint"
         app:layout_constraintStart_toStartOf="@id/guideLine"
         app:layout_constraintStart_toEndOf="@id/nameTextView2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,6 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
         android:layout_marginStart="100dp"
+        android:hint="@string/commentHint"
         app:layout_constraintStart_toStartOf="@id/guideLine"
         app:layout_constraintStart_toEndOf="@id/nameTextView3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,6 +135,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
         android:layout_marginStart="100dp"
+        android:hint="@string/commentHint"
         app:layout_constraintStart_toStartOf="@id/guideLine"
         app:layout_constraintStart_toEndOf="@id/nameTextView4"
         app:layout_constraintEnd_toEndOf="parent"
