--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,6 +88,8 @@
         app:layout_constraintTop_toBottomOf="@+id/textView10"
         tools:ignore="MissingConstraints" />
 
+
+
     <ImageView
         android:id="@+id/memberIB1"
         android:layout_width="135dp"
@@ -129,10 +131,10 @@
         android:layout_height="150dp"
         android:layout_marginStart="20dp"
         android:background="@drawable/thumbnail2"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toEndOf="@+id/memberIB1"
-        app:layout_constraintTop_toTopOf="@+id/memberIB1"
+        app:layout_constraintTop_toBottomOf="@+id/view"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
@@ -164,9 +166,10 @@
         android:layout_width="135dp"
         android:layout_height="150dp"
         android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         android:background="@drawable/thumbnail3"
         app:layout_constraintEnd_toEndOf="@+id/memberIB1"
-        app:layout_constraintStart_toStartOf="@+id/memberIB1"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
         tools:ignore="SpeakableTextPresentCheck" />
 
@@ -199,9 +202,9 @@
         android:layout_width="135dp"
         android:layout_height="150dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/thumbnail4"
-        app:layout_constraintEnd_toEndOf="@+id/memberIB2"
-        app:layout_constraintStart_toStartOf="@+id/memberIB2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
         tools:ignore="SpeakableTextPresentCheck" />
 
