--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -106,7 +106,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:visibility="invisible" />
+        android:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/updateBtn"
