--- a/app/src/main/res/values/credits.xml
+++ b/app/src/main/res/values/credits.xml
@@ -38,7 +38,9 @@
         "https://github.com/tommybuonomo/dotsindicator"\n\n
         "방명록"\n
         "https://firebase.google.com/docs/firestore/query-data/get-data?_gl=1*7zzexa*_up*MQ..*_ga*MTcwNjY1ODY2Ni4xNzA5MTY5MjMz*_ga_CW55HF8NVT*MTcwOTE2OTIzMy4xLjAuMTcwOTE2OTI3My4wLjAuMA..&amp;gclid=Cj0KCQjw-pCVBhCFARIsAGMxhAfJIsNyErOjX8xKPYMYEVvPA7RQfxIPUYPoUTFIe7BgyBI-lgBgbeMaAtxcEALw_wcB&amp;gclsrc=aw.ds&amp;hl=ko#example_data"\n\n
-
+        "https://stickode.tistory.com/139"\n\n
+        "AutoLink"\n
+        "https://developer.android.com/reference/android/widget/TextView"\n\n
     </string>
 
 </resources>
