activity_add, activity_team 라인 수 조정

--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -9,8 +9,8 @@
 
 
     <include
-        layout = "@layout/toolbar"
-        android:id="@+id/add_toolbar"/>
+        android:id="@+id/add_toolbar"
+        layout="@layout/toolbar" />
 
 
     <TextView
@@ -18,22 +18,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="55dp"
-        app:layout_constraintStart_toStartOf="@id/line"
-        app:layout_constraintTop_toTopOf="parent"
         android:text="댓글 달기"
         android:textSize="30sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@id/line"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="3dp"
-        android:layout_marginEnd="35dp"
         android:layout_marginStart="30dp"
-        app:layout_constraintTop_toBottomOf="@id/titleTextView"
+        android:layout_marginEnd="35dp"
+        android:background="@color/grey"
         app:layout_constraintStart_toStartOf="@id/titleTextView"
-        android:background="@color/grey" />
-
+        app:layout_constraintTop_toBottomOf="@id/titleTextView" />
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -48,101 +47,101 @@
         android:id="@+id/nameTextView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="100dp"
         android:text="@string/name1"
         android:textSize="20sp"
-        android:layout_marginStart="30dp"
-        app:layout_constraintTop_toBottomOf="@id/line"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="100dp"/>
+        app:layout_constraintTop_toBottomOf="@id/line" />
 
     <EditText
         android:id="@+id/nameEditText1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
         android:layout_marginStart="100dp"
+        android:layout_marginEnd="30dp"
         android:hint="@string/commentHint"
+        android:maxLines="1"
         app:layout_constraintBaseline_toBaselineOf="@id/nameTextView1"
         app:layout_constraintBottom_toBottomOf="@id/nameTextView1"
-        app:layout_constraintTop_toTopOf="@+id/nameTextView1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/guideLine" />
+        app:layout_constraintStart_toEndOf="@+id/guideLine"
+        app:layout_constraintTop_toTopOf="@+id/nameTextView1" />
 
     <TextView
         android:id="@+id/nameTextView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="50dp"
         android:text="@string/name2"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/nameTextView1"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="50dp"/>
+        app:layout_constraintTop_toBottomOf="@id/nameTextView1" />
 
     <EditText
         android:id="@+id/nameEditText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
         android:layout_marginStart="100dp"
+        android:layout_marginEnd="30dp"
         android:hint="@string/commentHint"
-        app:layout_constraintStart_toStartOf="@id/guideLine"
-        app:layout_constraintStart_toEndOf="@id/nameTextView2"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:maxLines="1"
         app:layout_constraintBaseline_toBaselineOf="@id/nameTextView2"
-        app:layout_constraintBottom_toBottomOf="@id/nameTextView1"/>
+        app:layout_constraintBottom_toBottomOf="@id/nameTextView1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/nameTextView2"
+        app:layout_constraintStart_toStartOf="@id/guideLine" />
 
     <TextView
         android:id="@+id/nameTextView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="50dp"
         android:text="@string/name3"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/nameTextView2"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/nameTextView2" />
 
     <EditText
         android:id="@+id/nameEditText3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
         android:layout_marginStart="100dp"
+        android:layout_marginEnd="30dp"
         android:hint="@string/commentHint"
-        app:layout_constraintStart_toStartOf="@id/guideLine"
-        app:layout_constraintStart_toEndOf="@id/nameTextView3"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:maxLines="1"
         app:layout_constraintBaseline_toBaselineOf="@id/nameTextView3"
-        app:layout_constraintBottom_toBottomOf="@id/nameTextView3"/>
+        app:layout_constraintBottom_toBottomOf="@id/nameTextView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/nameTextView3"
+        app:layout_constraintStart_toStartOf="@id/guideLine" />
 
     <TextView
         android:id="@+id/nameTextView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/name4"
-        android:layout_marginTop="50dp"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="50dp"
+        android:text="@string/name4"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/nameTextView3"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintTop_toBottomOf="@id/nameTextView3" />
 
     <EditText
         android:id="@+id/nameEitText4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
         android:layout_marginStart="100dp"
+        android:layout_marginEnd="30dp"
         android:hint="@string/commentHint"
-        app:layout_constraintStart_toStartOf="@id/guideLine"
-        app:layout_constraintStart_toEndOf="@id/nameTextView4"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:maxLines="1"
         app:layout_constraintBaseline_toBaselineOf="@id/nameTextView4"
-        app:layout_constraintBottom_toBottomOf="@id/nameTextView4"/>
-
-
+        app:layout_constraintBottom_toBottomOf="@id/nameTextView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/nameTextView4"
+        app:layout_constraintStart_toStartOf="@id/guideLine" />
 
 
     <Button
